--- a/OLXFakedBackend/appsettings.json
+++ b/OLXFakedBackend/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ShopDbContext": "localhost;Initial Catalog=ShopDb;User Id=sa;Password=test3210!;"
+  }
 }
 
