Fix of DB options on DB integrations

--- a/OLXFakedBackend/appsettings.json
+++ b/OLXFakedBackend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShopDbContext": "localhost;Initial Catalog=ShopDb;User Id=sa;Password=test3210!;"
+    "ShopDbContext": "Server=localhost;Database=ShopDb;User ID=sa;Password=test3210!;TrustServerCertificate=true;"
   }
 }
 
