--- a/OLXFakedBackend/appsettings.json
+++ b/OLXFakedBackend/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ShopDbContext": "Server=localhost,1433;Database=ShopDb;User ID=sa;Password=test3210!;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    //"ShopDbContext": "Server=172.17.0.1,1433;Database=ShopDb;User ID=sa;Password=test3210!;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    //"ShopDbContext": "Server=localhost,1433;Database=ShopDb;User ID=sa;Password=test3210!;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "ShopDbContext": "Server=172.17.0.1,1433;Database=ShopDb;User ID=sa;Password=test3210!;TrustServerCertificate=true;MultipleActiveResultSets=true"
   }
 }
 
