--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,13 @@ services:
     ports:
       - 8080:80
       - 8443:443
+    volumes:
+      - ./OLXFakedBackend/DeploymentData:/app/DeploymentData
+
   backend_db:
     image: mcr.microsoft.com/azure-sql-edge:1.0.6
     environment:
        MSSQL_SA_PASSWORD: test3210!
        ACCEPT_EULA: Y
     ports:
-       - 1433:1433
+       - 1433:1433 
