--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - 8443:443
     volumes:
       - ./OLXFakedBackend/DeploymentData:/app/DeploymentData
+    networks:
+      - olx_relation_network
 
   backend_db:
     image: mcr.microsoft.com/azure-sql-edge:1.0.6
@@ -18,4 +20,11 @@ services:
        MSSQL_SA_PASSWORD: test3210!
        ACCEPT_EULA: Y
     ports:
-       - 1433:1433 
+       - 1433:1433
+    networks:
+      - olx_relation_network
+
+networks:
+  olx_relation_network:
+    name: olx_relation_network
+    external: true
