1. Docker changes 2. Items addition with related pictures 3. Endpoints to add and get the pictures

--- a/OLXFakedBackend/Dockerfile
+++ b/OLXFakedBackend/Dockerfile
@@ -16,7 +16,12 @@ RUN dotnet build "OLXFakedBackend.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "OLXFakedBackend.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+COPY --from=build /src/OLXFakedBackend/images ./images
+COPY --from=build /src/OLXFakedBackend/DeploymentData ./DeploymentData
+
 ENTRYPOINT ["dotnet", "OLXFakedBackend.dll"]
