--- a/OLXFakedBackend/Dockerfile
+++ b/OLXFakedBackend/Dockerfile
@@ -9,8 +9,8 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
 COPY ["OLXFakedBackend/OLXFakedBackend.csproj", "OLXFakedBackend/"]
 RUN dotnet restore "OLXFakedBackend/OLXFakedBackend.csproj"
-ADD ../certs/aspnetapp.pfx /https/
-COPY . .
+COPY ../certs/aspnetapp.pfx /https/
+#COPY . .
 
 WORKDIR "/src/OLXFakedBackend"
 RUN dotnet build "OLXFakedBackend.csproj" -c Release -o /app/build
